[gd_scene load_steps=3 format=3 uid="uid://d0pe0pdn263wg"]

[ext_resource type="Texture2D" uid="uid://dqkg0d5tnngs6" path="res://Sprites/Buildings/Category/default_icon.png" id="1_ar7ao"]
[ext_resource type="Script" uid="uid://pbxi714j7air" path="res://Scenes/Displays/open_building_tab.gd" id="2_p38wc"]

[node name="BuildTabButton" type="Button" node_paths=PackedStringArray("node")]
custom_minimum_size = Vector2(48, 48)
tooltip_text = "TabName"
icon = ExtResource("1_ar7ao")
expand_icon = true
script = ExtResource("2_p38wc")
node = NodePath("")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
